# AtomDisc

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
atomdisc/: README.md
atomdisc/config/: __init__.py  stage1.py
atomdisc/data/: readme.md
atomdisc/datasets/: forward_dataset.py  reagent_dataset.py  retrosynthesis_dataset.py
atomdisc/evaluation/: sft_evaluator_smiles.py
atomdisc/metrics/: compute_metrics_smiles.py
atomdisc/models/vector_quantize_pytorch/: finite_scalar_quantization.py  lookup_free_quantization.py  residual_fsq.py  residual_lfq.py  residual_sim_vq.py  residual_vq.py  vector_quantize_pytorch.py
atomdisc/tokenization/: mol_tokenizer.py  mol_tokenizer_property.py
atomdisc/utils/: gnn_vq_utils.py
fig/: convert.py
scripts/: pretrain_lora.py  readme.md  sft_forward_prediction.py  sft_property_classification.py  sft_property_regression.py  sft_reagent_prediction.py  sft_retrosynthesis.py  train_codebook.py  train_embedding.py
scripts/case/: DFT_Diff_Token.py  DFT_Mixture_Token.py  batch_PSA.py  batch_psa_mixture_token.py  elec.py  elec_diff_token.py  readme.md
